docs: complete all incomplete documentation, add SUPERSEDED headers to planning docs
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>